fix: logo on mobile

--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -46,7 +46,7 @@
             &-default {
                 display: block;
                 margin-bottom: 5px;
-                color: $primary-theme-color;
+                color: $p-color;
                 font-family: "Fira Code";
                 font-size: 20px;
                 text-decoration: none;
